<resources>
    <string name="app_name">AppForEverything</string>

    <string name="mail">Mail</string>
    <string name="password">Password</string>

    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_google">Sign in google</string>
    <string name="sign_in_facebook">Sign in facebook</string>
    <string name="unknown_request_code">Unknown request code</string>
    <string name="null_id_token">Null id token</string>
    <string name="canceled_sign_in">Sign in canceled</string>
    <string name="empty_user_data">Empty mail or password</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="logout">logout</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_image_placeholder">Profile image</string>

    <string name="placeholder_profile_image_uri">http://lorempixel.com/200/200/</string>
    <string name="profile_name_placeholder">Your name</string>
    <string name="user_sign_out">User sign out</string>
    <string name="user_not_sign_out">User not sign out</string>
    <string name="title_activity_main">MainActivity</string>

</resources>
